# Enterprise-BLE-POC

./: Cargo.toml  LICENSE  README.md
src/: build.rs  iot_nipc.rs  lib.rs  main.rs  nipc.rs  nipc_utils.rs
src/System/: device_internals.rs
