[package]
name = "iot-provision"
version = "0.1.0"
edition = "2021"

[lib]
name="nipc"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["json","blocking"] }
tokio = { version = "1", features = ["full"] }
urn = { version = "0.7.0", features= ["serde"] }
rumqttc = "0.24.0"
prost = "0.13.4"
prost-types = "0.13.4"
chrono = "0.4.39"